@@ -1204,13 +1204,15 @@ of those items.
 PROP_LIMITEDEQUIP=\
 Property   : Prop_LimitedEquip\n\r\
 Targets    : Items\n\r\
-Parameters : [MAX EQUIPPED](;ID="[IDENTIFIER]" MESSAGE="[MESSAGE]")\n\r\
+Parameters : [MAX NUM](;ID="[IDENTIFIER]" MESSAGE="[MESSAGE]")\n\r\
+Parameters :          (GET=[T/F] MASK="[ZAPPERMASK]")\n\r\
 Example    : 3\n\r\
 Example    : 3;id="my unique id" message="Can't do it!"\n\r\
 Description: \n\r\
 This property will ensure that no more than the given number of items \
 with the same name (or ID) as the ones with this property can be equipped \
-by someone at the same time.
+by someone at the same time, or gotten at the same time if GET=TRUE.  An \
+optional zappermask can filter who this restriction applies to.
 
 PROP_LIMITEDITEMS=\
 Property   : Prop_LimitedItems\n\r\
