@@ -422,6 +422,8 @@ function SipletWindow(windowName)
 	this.flushNode = function(node, brCt)
 	{
 		var trimCount = this.maxLines / 10;
+		if(trimCount > 1000)
+			trimCount = 1000;
 		var container;
 		if((this.window.childElementCount == 0)
 		||(this.window.lastChild.brCount >= trimCount))
