@@ -44,6 +44,8 @@
  43. Falling items can now hit and damage mobs below them, or boardables.
  44. Email Command now uses the message maker for longer messages.
  45. Many more editors now support the Siplet.Input pop-up box.
+ 46. GMCP now supports exit open/locked status
+ 47. Prop_LimitedEquip will now also act as Limited Get if flagged as such.
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
